logs/verto.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_slugify-1.2.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slugify'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/verto'...
Listing './lib/python3.5/site-packages/verto/errors'...
Listing './lib/python3.5/site-packages/verto/html-templates'...
Listing './lib/python3.5/site-packages/verto/images'...
Listing './lib/python3.5/site-packages/verto/processors'...
Listing './lib/python3.5/site-packages/verto/tests'...
Listing './lib/python3.5/site-packages/verto/tests/assets'...
Listing './lib/python3.5/site-packages/verto/tests/assets/beautify'...
Listing './lib/python3.5/site-packages/verto/tests/assets/boxed-text'...
Listing './lib/python3.5/site-packages/verto/tests/assets/button-link'...
Listing './lib/python3.5/site-packages/verto/tests/assets/comment'...
Listing './lib/python3.5/site-packages/verto/tests/assets/conditional'...
Listing './lib/python3.5/site-packages/verto/tests/assets/configuration'...
Listing './lib/python3.5/site-packages/verto/tests/assets/glossary-link'...
Listing './lib/python3.5/site-packages/verto/tests/assets/heading'...
Listing './lib/python3.5/site-packages/verto/tests/assets/html-parser'...
Listing './lib/python3.5/site-packages/verto/tests/assets/iframe'...
Listing './lib/python3.5/site-packages/verto/tests/assets/image-container'...
Listing './lib/python3.5/site-packages/verto/tests/assets/image-inline'...
Listing './lib/python3.5/site-packages/verto/tests/assets/image-tag'...
Listing './lib/python3.5/site-packages/verto/tests/assets/interactive'...
Listing './lib/python3.5/site-packages/verto/tests/assets/jinja'...
Listing './lib/python3.5/site-packages/verto/tests/assets/markdown-override'...
Listing './lib/python3.5/site-packages/verto/tests/assets/panel'...
Listing './lib/python3.5/site-packages/verto/tests/assets/relative-link'...
Listing './lib/python3.5/site-packages/verto/tests/assets/remove'...
Listing './lib/python3.5/site-packages/verto/tests/assets/remove-title'...
Listing './lib/python3.5/site-packages/verto/tests/assets/save-title'...
Listing './lib/python3.5/site-packages/verto/tests/assets/scratch'...
Listing './lib/python3.5/site-packages/verto/tests/assets/scratch-inline'...
Listing './lib/python3.5/site-packages/verto/tests/assets/smoke'...
Listing './lib/python3.5/site-packages/verto/tests/assets/style'...
Listing './lib/python3.5/site-packages/verto/tests/assets/table-of-contents'...
Listing './lib/python3.5/site-packages/verto/tests/assets/video'...
Listing './lib/python3.5/site-packages/verto/utils'...
Listing './lib/python3.5/site-packages/verto-0.7.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
